--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: "Setup: Uninstall old versions and ensure dependencies"
+- name: "Setup: Uninstall old versions and install dependencies"
   block:
     - name: "CentOS/RedHat: Uninstall old Calibre versions."
       yum:
@@ -62,65 +62,118 @@
         - "{{ _yum_uninstall }}"
       when: item.ansible_job_id is defined
 
-- name: "Install Calibre"
-  block:
-    - name: "CentOS/RedHat: Add package Calibre via Yum"
-      yum:
-        name: calibre
-        state: present
-        update_cache: true
-      register: _yum_install
-      async: 600
-      poll: 0
-      when: (ansible_distribution == "CentOS") or (ansible_distribution == "Red Hat Enterprise Linux")
-    - name: "Debian/Ubuntu: Add package Calibre via APT"
+    - name: "Debian/Ubuntu: Install Calibre dependencies"
       apt:
-        name: calibre
+        name:
+          - xdg-utils
+          - xz-utils
+          - wget
+          # - libstdc++6
         state: present
-        update_cache: true
-      register: _apt_install
+      register: _apt_dependencies_install
       async: 600
       poll: 0
       when: ansible_os_family == "Debian"
-    - name: "Fedora: Add package Calibre via DNF"
-      dnf:
-        name: calibre
+    
+    - name: "CentOS/RedHat: Install Calibre dependencies"
+      yum:
+        name:
+          - xdg-utils
+          - xz
+          - xz-devel
+          - wget
+          # - libstdc++-devel
         state: present
-        update_cache: true
-      register: _dnf_install
+      register: _yum_dependencies_install
       async: 600
       poll: 0
-      when: ansible_distribution == "Fedora"
-    - name: "Arch: Add package Calibre via Pacman"
+      when: ansible_distribution == "CentOS" or ansible_distribution == "Red Hat Enterprise Linux"
+      
+    - name: "Arch: Install Calibre dependencies"
       pacman:
-        name: calibre
+        name:
+          - xdg-utils
+          - xz
+          - wget
         state: present
-        update_cache: true
-      register: _pacman_install
+      register: _pacman_dependencies_install
       async: 600
       poll: 0
       when: ansible_os_family == "Archlinux"
-    - name: "Suse: Add package Calibre via Zypper"
+  
+    - name: "Suse: Install Calibre dependencies"
       zypper:
-        name: calibre
+        name:
+          - xz
+          - xz-devel
+          - wget
+          - xdg-utils
         state: present
-        update_cache: true
-      register: _zypper_install
+      register: _zypper_dependencies_install
       async: 600
       poll: 0
       when: ansible_os_family == "Suse"
 
-    - name: Wait for package installation to finish
+    - name: "Fedora: Install Calibre dependencies"
+      dnf:
+        name:
+          - xz
+          - xz-devel
+          - wget
+        state: present
+      register: _dnf_dependencies_install
+      async: 600
+      poll: 0
+      when: ansible_distribution == "Fedora"
+
+    - name: Wait for package dependencies to install
       async_status:
         jid: "{{ item.ansible_job_id }}"
-      register: _install_results
-      until: _install_results.finished is defined and _install_results.finished
+      register: _dependencies_install_results
+      until: _dependencies_install_results.finished is defined and _dependencies_install_results.finished
       delay: 5  # Check every 5 seconds. Adjust as you like.
       retries: 120  # Retry up to 120 times. Adjust as needed.
       loop:
-        - "{{ _apt_install }}"
-        - "{{ _dnf_install }}"
-        - "{{ _zypper_install }}"
-        - "{{ _pacman_install }}"
-        - "{{ _yum_install }}"
+        - "{{ _apt_dependencies_install }}"
+        - "{{ _dnf_dependencies_install }}"
+        - "{{ _zypper_dependencies_install }}"
+        - "{{ _pacman_dependencies_install }}"
+        - "{{ _yum_dependencies_install }}"
       when: item.ansible_job_id is defined
+
+- name: "Install Calibre"
+  block:
+    - name: Download Calibre Installer
+      get_url:
+        url: https://download.calibre-ebook.com/linux-installer.sh
+        dest: ${DEST_TEMP_INSTALL_SCRIPT:-"/tmp/linux-installer.sh"}
+        force: yes
+      register: _urlDownload
+
+    - name: Debug Download URL
+      debug:
+        var: _urlDownload
+    
+    - name: Execute Calibre Install Script on Targets
+      script: ${DEST_TEMP_INSTALL_SCRIPT:-"/tmp/linux-installer.sh"}
+      become: true
+      register: _install
+
+    - name: Debug Install
+      debug:
+        var: _install
+
+    # - name: Remove dependencies that are no longer required
+    #   apt:
+    #     autoremove: yes
+    
+    # - name: Wait for package installation to finish
+    #   async_status:
+    #     jid: "{{ item.ansible_job_id }}"
+    #   register: _install_results
+    #   until: _install_results.finished is defined and _install_results.finished
+    #   delay: 5  # Check every 5 seconds. Adjust as you like.
+    #   retries: 120  # Retry up to 120 times. Adjust as needed.
+    #   loop:
+    #     - "{{ _install }}"
+    #   when: item.ansible_job_id is defined
